syntax = "proto3";
package xsuportal.proto.services.account;
option go_package = "github.com/isucon/isucon10-final/proto/services/account";

message LoginRequest {
  string contestant_id = 1;
  string password = 2;
}

message LoginResponse {}
